<resources>
    <string name="app_name">COEX</string>
    <string name="nav_home_home">Home</string>
    <string name="nav_home_schedule">Schedule</string>
    <string name="nav_home_setting">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_location_permission">Require permission</string>
    <string name="text_location_permission">Location permission</string>
    <string name="ok">OK</string>
    <string name="maps_api_key">AIzaSyD0aoSy5j9936YhXwTtbmrjLtdfyV3g1oU</string>
    <string name="detail_coex_wifi">Free Wifi</string>
    <string name="detail_coex_drink">Drink</string>
    <string name="detail_coex_printer">Printer</string>
    <string name="detail_coex_conversion_call">Conversion call</string>
    <string name="detail_coex_air_conditioning">Air Conditioning</string>
    <string name="activity_detail_coex_about_space">About Space</string>
    <string name="activity_detail_coex_our_service">Our of service</string>
    <string name="activity_detail_coex_view_more">View more</string>
    <string name="activity_detail_coex_edt_confirm_booking">Confirm booking room</string>
    <string name="activity_booking_title">Booking</string>
    <string name="activity_booking_style_room">Style room</string>
    <string name="activity_booking_hint_style_room">Select a style room</string>
    <string name="activity_booking_number_of_guest">Number of guest</string>
    <string name="activity_booking_hint_guest">Guest(s)</string>
    <string name="activity_booking_time_of_appointment">Time of appointment</string>
    <string name="activity_booking_hint_time_of_appointment">Choose the time</string>
    <string name="activity_booking_duration">Duration</string>
    <string name="activity_booking_txt_total_amount">Total amount</string>
    <string name="activity_booking_btn_booking">Booking</string>
    <string name="fragment_space_list_title">Space list</string>
    <string name="activity_detail_coex_txt_style_room">Style room</string>
    <string name="activity_profile_title">Profile</string>
    <string name="activity_profile_txt_gen_id">GEN ID:</string>
    <string name="activity_profile_txt_email">Email:</string>
    <string name="activity_profile_txt_phone_number">Phone number:</string>
    <string name="activity_profile_txt_change_password">Change password</string>
    <string name="activity_profile_txt_edit_profile">Edit profile</string>
    <string name="activity_edit_profile_title">Edit profile</string>
    <string name="activity_edit_profile_txt_name">Name</string>
    <string name="activity_edit_profile_hint_name">Add your edit name here</string>
    <string name="activity_edit_profile_txt_phone">Phone number</string>
    <string name="activity_edit_profile_hint_phone">Add new phone number here</string>
    <string name="activity_edit_profile_btn_submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="activity_p_and_r_title"><![CDATA[Point & Reward]]></string>
    <string name="btn_change_to_reward">Change to reward</string>
    <string name="btn_convert_to_coin">Convert to coin</string>
    <string name="activity_p_and_r_txt_title_earn_point">How to earn point?</string>
    <string name="activity_p_and_r_txt_descroption_earn_point">- Earning points will be base on the value of the complete booking payment.</string>
    <string name="activity_p_and_r_txt_descroption_earn_point_2">- Accumulate</string>
    <string name="activity_p_and_r_txt_title_card">Your card</string>
    <string name="activity_p_and_r_txt_descroption_card">- Card contain your account number where you convert point to coin </string>
    <string name="activity_p_and_r_txt_descroption_card_2">- With 1.000.000 point, you will have 1 coin</string>
    <string name="activity_p_and_r_btn_change_card">Change your card</string>
    <string name="activity_p_and_r_btn_add_card">Add card</string>
    <string name="fragment_setting_txt_title">Setting</string>
    <string name="fragment_setting_txt_log_out">Log out</string>
    <string name="fragment_setting_txt_profile">profile</string>
    <string name="fragment_setting_txt_p_and_r"><![CDATA[Point & reward]]></string>
    <string name="fragment_setting_txt_general">General</string>
    <string name="fragment_setting_txt_about_us">About us</string>
    <string name="fragment_setting_txt_policy">Policy</string>
</resources>
