<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PAndRActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_booking_status_bar_height">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_booking_status_bar_height">

            <TextView
                style="@style/title_14_pink_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/activity_p_and_r_title" />

            <ImageView
                android:id="@+id/activity_p_and_r_btn_back"
                android:layout_width="@dimen/activity_booking_btn_back_height"
                android:layout_height="@dimen/activity_booking_btn_back_height"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_booking_btn_back_margin"
                android:src="@drawable/ic_arrow_back_black_24dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_p_and_r_layout_1"
        android:layout_marginTop="@dimen/activity_p_and_r_layout_margin"
        android:layout_marginBottom="@dimen/activity_p_and_r_layout_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_subtract" />

        <TextView
            android:id="@+id/activity_p_and_r_txt_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_bold"
            android:text="234 POINT"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="23sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line"
                android:layout_marginTop="@dimen/activity_p_and_r_line_margin"
                android:background="@color/silver" />

            <TextView
                style="@style/title_13_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/text_margin_top"
                android:text="@string/activity_p_and_r_txt_title_earn_point"
                android:textSize="14sp" />

            <TextView
                style="@style/title_13_silver_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/description_margin_top"
                android:maxLines="2"
                android:text="@string/activity_p_and_r_txt_descroption_earn_point" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line"
                android:layout_marginTop="@dimen/activity_p_and_r_line_margin"
                android:background="@color/silver" />

            <TextView
                style="@style/title_13_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/text_margin_top"
                android:text="@string/activity_p_and_r_txt_title_card"
                android:textSize="14sp" />

            <TextView
                style="@style/title_13_silver_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/description_margin_top"
                android:maxLines="2"
                android:text="@string/activity_p_and_r_txt_descroption_card" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_booking_button_hieght"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginRight="@dimen/text_margin_left"
                android:background="@drawable/layout_cover_dialog_2">

                <TextView
                    style="@style/title_14_pink_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/activity_p_and_r_btn_add_card"
                    android:textColor="@color/black" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_p_and_r_layout_btn_height"
                android:layout_marginLeft="@dimen/dialog_margin"
                android:layout_marginRight="@dimen/dialog_margin"
                android:layout_marginBottom="@dimen/dialog_margin_bottom">

                <Button
                    android:id="@+id/activity_p_and_r_btn_change_reward"
                    style="@style/title_13_black_regular"
                    android:layout_width="@dimen/detail_coex_weight"
                    android:layout_height="match_parent"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/cancel_button_normal"
                    android:text="@string/btn_change_to_reward"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/activity_p_and_r_btn_convert_to_coin"
                    style="@style/title_13_black_regular"
                    android:layout_width="@dimen/detail_coex_weight"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/cancel_button_normal"
                    android:text="@string/btn_convert_to_coin"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line"
                android:layout_marginTop="@dimen/activity_p_and_r_line_margin"
                android:background="@color/silver" />

            <TextView
                style="@style/title_13_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/text_margin_top"
                android:text="@string/activity_p_and_r_txt_title_earn_point"
                android:textSize="14sp" />

            <TextView
                style="@style/title_13_silver_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/description_margin_top"
                android:maxLines="2"
                android:text="@string/activity_p_and_r_txt_descroption_earn_point" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    style="@style/title_13_silver_black_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left"
                    android:maxLines="2"
                    android:text="@string/activity_p_and_r_txt_descroption_earn_point_2" />

                <TextView
                    style="@style/title_13_black_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text=" 3 point = 10,000 VND" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line"
                android:layout_marginTop="@dimen/activity_p_and_r_line_margin"
                android:background="@color/silver" />

            <TextView
                style="@style/title_13_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/text_margin_top"
                android:text="@string/activity_p_and_r_txt_title_card"
                android:textSize="14sp" />

            <TextView
                style="@style/title_13_silver_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/description_margin_top"
                android:maxLines="2"
                android:text="@string/activity_p_and_r_txt_descroption_card" />

            <TextView
                style="@style/title_13_silver_black_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:text="@string/activity_p_and_r_txt_descroption_card_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_p_and_r_card_height"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginRight="@dimen/text_margin_left"
                android:background="@drawable/layout_cover_dialog"
                android:orientation="vertical">

                <TextView
                    style="@style/title_13_black_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/description_margin_left"
                    android:layout_marginTop="@dimen/text_margin_top"
                    android:text="123 *** **** 789" />

                <TextView
                    style="@style/title_12_blue_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/description_margin_left"
                    android:layout_marginTop="@dimen/description_margin_left"
                    android:text="STORM NGUYEN VU TIEN DUNG"
                    android:textSize="14sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_booking_button_hieght"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginRight="@dimen/text_margin_left"
                android:background="@drawable/layout_cover_dialog_2">

                <TextView
                    style="@style/title_14_pink_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/activity_p_and_r_btn_change_card"
                    android:textColor="@color/black" />
            </RelativeLayout>


        </LinearLayout>
    </RelativeLayout>

</LinearLayout>